--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,11 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.22'
     runtimeOnly 'com.h2database:h2'
+    compileOnly 'org.projectlombok:lombok'
+    compile group: 'org.modelmapper', name: 'modelmapper', version: '2.3.8'
+    annotationProcessor 'org.projectlombok:lombok'
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
