--- a/build.gradle
+++ b/build.gradle
@@ -16,10 +16,14 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.22'
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.12.0'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.12.0'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.0'
     runtimeOnly 'com.h2database:h2'
     compileOnly 'org.projectlombok:lombok'
-    compile group: 'org.modelmapper', name: 'modelmapper', version: '2.3.8'
+    compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.22'
+    compile group: 'org.modelmapper', name: 'modelmapper', version:'2.3.8'
+    compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.12.0'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
